matrix/postgresql/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pg
  namespace: matrix
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
